--- a/news/templates/article_detail.html
+++ b/news/templates/article_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base_layout.html' %}
+{% load crispy_forms_tags %}
 {% block nav-news %}
 menu-active
 {% endblock %}
@@ -30,7 +31,7 @@ menu-active
                 <img src="{{ post.thumb.url }}" class="card-img-top" alt="blog image" />
                 <p class="title">{{ post.date.day }}<br />{{ post.date|date:"M" }}</p>
                 <div class="card-body">
-                    <small class="text-muted"><i class="fas fa-user"></i> Admin  &nbsp; &nbsp;<i class="far fa-heart"></i> 2&nbsp; &nbsp;<i class="far fa-comments"></i> 15</small>
+                    <small class="text-muted"><i class="fas fa-user"></i> Admin  &nbsp; &nbsp;<i class="far fa-heart"></i> 2&nbsp; &nbsp;<i class="far fa-comments"></i>{{ count }}</small>
                     <h5 class="card-title">{{post.short_description}}</h5>
                     <p class="card-text">
                         {{ post.body }}
@@ -58,6 +59,11 @@ menu-active
         <h6 class="post-header">comments</h6>
         <div class="post row">
             <div class="col-lg-8 col-md-12 col-xs-12">
+                
+                {% if comments %}
+
+                {% for comment in comments %}
+
                 <div class="card card-white post">
                     <div class="post-heading">
                         <div class="float-left image">
@@ -65,72 +71,45 @@ menu-active
                         </div>
                         <div class="float-left meta">
                             <div class="title h5">
-                                <a href="#"><strong>Ryan Wood</strong></a> 
+                                <a href="#"><strong>{{ comment.name }}</strong></a> 
                                 <span>made a post</span>
                             </div>
-                            <h6 class="text-muted time">15 April 2020</h6>
+                            <h6 class="text-muted time">{{ comment.date|date:"d N Y" }}</h6>
                         </div>
                     </div>
                     <div class="post-description">
-                        <p>Bootey is a gallery of free spinner resouces templates and utilities of bootstrap css html django codes for development purposes.</p>
+                        <p>{{ comment.content }}</p>
                     </div>
                 </div>
-           
+                {% endfor %} 
+                {% else %}
                 <div class="card card-white post">
-                    <div class="post-heading">
-                        <div class="float-left image">
-                            <img src="{% static 'images/b02.jpg' %}" class="img-circle avatar" alt="img" />
-                        </div>
-                        <div class="float-left meta">
-                            <div class="title h5">
-                                <a href="#"><strong>john doe</strong></a>
-                                <span>made a post</span>
-                            </div>
-                            <h6 class="text-muted time">15 April 2020</h6>
-                        </div>
-                    </div>
-                    <div class="post-description">
-                        <p>Bootey is a gallery of free spinner resouces templates and utilities of bootstrap css html django codes for development purposes.</p>
-                    </div>
+                    <h6>No comment here yet</h6>
                 </div>
-                
-                 <div class="card card-white post">
-                    <div class="post-heading">
-                        <div class="float-left image">
-                            <img src="{% static 'images/b02.jpg' %}" class="img-circle avatar" alt="img" />
-                        </div>
-                        <div class="float-left meta">
-                            <div class="title h5">
-                                <a href="#"><strong>travis declan</strong></a>
-                                <span>made a post</span>
-                            </div>
-                            <h6 class="text-muted time">27 April 2020</h6>
-                        </div>
-                    </div>
-                    <div class="post-description">
-                        <p>Bootey is a gallery of free spinner resouces templates and utilities of bootstrap css html django codes for development purposes.</p>
-                    </div>
-                </div>
-                
+                {% endif %}
+
             </div>
             </div>
         </div>
         
-        
 <div class="container padding">
-<h6 class="comment-header">leave a comment</h6>
-<div class="comment row padding">
-   <div class="form-row col-lg-8 col-md-12 col-xs-12">
-                <div class="col">
-                    <input type="text" class="form-control"  placeholder="Name">
-                </div>
-                <div class="col">
-                    <input type="email" class="form-control"  placeholder="Email">
-                </div>
-                <label for="Message"></label>
-                    <textarea type="text" rows="8" class="form-control" placeholder="Message" required></textarea>
-                    <button type="submit" class="form-control">Send Message</button>
-            </div>
-</div>
+    <h6 class="comment-header">leave a comment</h6>
+    <div class="comment row padding">
+        <div class="form-row col-lg-8 col-md-12 col-xs-12">
+            <form action="" method="POST">
+                {% csrf_token %}
+                <div class="form-row">
+                    <div class="form-group col-md-6 mb-0">
+                        {{ comment_form.name|as_crispy_field }}
+                    </div>
+                    <div class="form-group col-md-6 mb-0">
+                            {{ comment_form.email|as_crispy_field }}
+                        </div>
+                    {{ comment_form.content }}
+                    </div>
+                <button type="submit" class="form-control">Send Message</button>
+            </form>
+        </div>
+    </div>
 </div>
 {% endblock %}
