--- a/static/home.css
+++ b/static/home.css
@@ -1820,70 +1820,6 @@ nav .breadcrumb li a:hover{
 	margin-top: 0px;
 	width: 100%;
 }
-.form-row .form-control{
-	height:55px;
-	margin-top: 40px;
-	border-radius: 0px;
-	border: 1px solid grey;
-	font-size: 15px;
-}
-#contact-form{
-	margin-top: 100px;
-	width: 100%;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-}
-#contact-form input{
-	width: 100%;
-	border-radius: 0px;
-	border: 1px solid grey;
-	box-shadow: none;
-	font-size: 15px;
-	height: 55px;
-	margin-top: 40px;
-}
-#contact-form textarea{
-	margin-top: 40px;
-	border: 1px solid grey;
-	border-radius: 0px;
-	box-shadow: none;
-	font-size: 15px;
-	width: 100%;
-	height: auto;
-}
-#contact-form button{
-	width: 200px; 
-	height: 60px; 
-	margin: 15px 0px; 
-	padding: 10px 10px;
-	background:#006420;
-	color: #cdcdcd; 
-	font-size: 15px; 
-	font-weight: 550;
-	text-transform: uppercase;
-}
-#contact-form button:hover{
-	background: #001f3f; 
-	color: #cdcdcd; 
-	transition: .3s;
-}
-#contact-form p{
-	font-size: 15px;
-	margin-top: 30px;
-	width: 100%;
-}
-#contact-form p strong{
-	text-decoration: underline;
-}
-#inputState{
-	margin-top: 40px;
-	width: 100%;
-	height: 55px;
-	border-radius: 0px;
-	border: 1px solid #666;
-	font-size: 15px;
-}
 .thank-you{
 	margin-top: 50px;
 }
@@ -2724,33 +2660,6 @@ nav .pagination a:hover{
 	color: #fff;
 	background: #006420;
 }
-.comment .form-row{
-	justify-content:justify;
-	width:100%;
-}
-.form-row input{
-	width:100%;
-}
-.comment .form-row textarea{
-	width:100%;
-	height: 180px;
-}
-.comment button {
-	width:200px;
-	height:60px;
-	margin:10px 25px;
-	padding:20px 20px;
-	background:#006420;
-	color:#fafafa;
-	font-size:16px;
-	font-weight:550px;
-	text-transform:uppercase;
-}
-.comment button:hover{
-	background:#cdcdcd;
-	color:#006420;
-	transition:.3s;
-}
 .comment-header{
 	margin-top:80px;
 	font-weight:bold;
@@ -2784,7 +2693,6 @@ nav .pagination a:hover{
 	background:#006420;
 	color:#fff; 
 }
-
 /*--------------------------------------------------------------
 # COMMENT SECTION
 ---------------------------------------------------------------*/
@@ -2801,6 +2709,9 @@ nav .pagination a:hover{
 	display:block;
 	margin-left:auto;
 	margin-right:auto;
+}
+.card-white .post{
+	padding: 20px 20px;
 }
 .card-white .h5{
 	font-family:15px;
@@ -2955,15 +2866,6 @@ nav .pagination a:hover{
 	height: 400px;
 	margin: 30px  0px;
 }
-/*--------------------------------------------------------------
-# MEDIA SCREENS / BREAK POINTS		1221px
---------------------------------------------------------------*/
-/* @media only screen and (max-width: 1221px) {
-	.table h2{
-		text-transform: uppercase;
-		font-size: 32px;
-	}
-} */
 /*--------------------------------------------------------------
 # MEDIA SCREENS / BREAK POINTS		1199px
 --------------------------------------------------------------*/
@@ -3230,11 +3132,6 @@ nav .pagination a:hover{
 		margin-top: 30px;
 		margin-left: 20px;
 	}
-	/* .services li{
-		line-height: 42px;
-		list-style-type: none;
-		margin-left: -10px;
-	} */
 }
 /*--------------------------------------------------------------
 # MEDIA SCREENS / BREAK POINTS		991px
