--- a/greensource_pages/templates/greensource_pages/about.html
+++ b/greensource_pages/templates/greensource_pages/about.html
@@ -21,21 +21,25 @@
 </nav>
 <div class="container-fluid padding">
     <div class="about-us row padding">
-        <div class="col-lg-7">
+        <div class="col-lg-7 col-md-7 col-xs-12">
             <p class="about">
                 Greensource energy is an emerging renewable energy and management company dedicated to delivering sustainable energy, with deep expertise in renewable energy. 
-                We are focused on energy including: Energy efficiency; Energy storage; Solar energy; Renewable energy product 
-                services and sustainability solutions.
-                <br/> 
+                We are focused on energy including:
+                <b>Energy efficiency;</b>
+                <b>Energy storage;</b>
+                <b>Solar energy;</b>
+                <b>Renewable energy products and services</b> and
+                <b>sustainability solutions.</b>
+                <br/><br/> 
                 We are an end-to-end, customer oriented, innovative green energy and management company providing cutting edge renewable
                 energy solutions for residential, large and small businesses. Our goal is to design and install best fit systems
                 while offering value for money.
-                <br/>
+                <br/><br/> 
                 We help redefine the relationship with your energy usage, empowering you take control of your energy consumption,
                 reducing utility cost and fuel hike price by 50%. We work hard to earn the trust of customers because we
                 believe strong relationships and long-term patnership are fundamental to our sustained success.</p>
         </div>
-        <div class="people wow fadeIn col-lg-5" data-wow-duration="4s" data-wow-delay="0.3s" data-wow-offset="10">
+        <div class="people wow fadeIn col-lg-5 col-md-5 col-xs-12" data-wow-duration="4s" data-wow-delay="0.3s" data-wow-offset="10">
             <img src="{% static 'images/about-us.jpg' %}" class="img-fluid" alt="rooftop installation" />
             <div class="inner-box">
                 <span  data-toggle="counter-up">250</span>
@@ -319,8 +323,8 @@
 <div class="container-fluid padding">
     <div class="row-counters row padding">
             <div class="counter-heading col-12">
-                    <h5>Our Business Success</h5>
-                    <p>You always get the best guidance</p>
+                    <h5>You always get the best guidance</h5>
+                    <p>Our Business Success</p>
                     <hr />
                 </div>
         <div class="counter col-xs-12 col-md-6 col-lg-3">
@@ -337,7 +341,7 @@
             </div>
             <span data-toggle="counter-up">28</span>
             <span class="sign">+</span>
-            <p>Completed Projects</p>
+            <p>Projects Done</p>
         </div>
         <div class="counter col-xs-12 col-md-6 col-lg-3">
             <div>
