--- a/greensource_pages/templates/greensource_pages/company-profile.html
+++ b/greensource_pages/templates/greensource_pages/company-profile.html
@@ -27,9 +27,13 @@
                 <ul>
                     <li>Business name: GreenSource Energy Consult</li>
                     <li>Business type: Sole proprietorship</li>
-                    <li>Company registration number: RC: 2826313</li>
+                    <li>Company registration number: RC: 3231396</li>
                     <li>(+234)8029442697</li>
-                    <li>Website: greensourceconsult.com</li>
+                    <li>Website: greensourcenergy.com</li>
+                    <li>Email: <a href="javascript:location='mailto:\u0068\u0065\u006c\u006c\u006f\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d';void 0">
+                        <script type="text/javascript">document.write('\u0068\u0065\u006c\u006c\u006f\u0040\u0067\u0072\u0065\u0065\u006e\u0073\u006f\u0075\u0072\u0063\u0065\u006e\u0065\u0072\u0067\u0079\u002e\u0063\u006f\u006d')</script>
+                    </a>
+                    </li>
                     <li>Physical address: Heritage Street of anobi Noah omu-arogun mowe-ofada, Ogun State Nigeria.</li>
                 </ul>
             </div>
