--- a/greensource_pages/templates/greensource_pages/index.html
+++ b/greensource_pages/templates/greensource_pages/index.html
@@ -196,7 +196,7 @@ menu-active
 <section>
     <div class="container-fluid padding">
         <div class="service col-12">
-            <h5>A vast range of services for your convinience</h5>
+            <h5>options for your convinience</h5>
             <p>Our Services</p>
             <hr />
         </div>
@@ -341,7 +341,7 @@ menu-active
 <section>
     <div class="container padding">
         <div class="service col-12">
-            <h5>What are clients are saying</h5>
+            <h5>What our clients are saying</h5>
             <p>Testimonials</p>
             <hr />
         </div>
@@ -443,7 +443,7 @@ menu-active
             </div>
             <span data-toggle="counter-up">28</span>
             <span class="sign">+</span>
-            <p>Completed Projects</p>
+            <p>Projects Done</p>
         </div>
         <div class="counter col-xs-12 col-md-6 col-lg-3">
             <div>
@@ -475,7 +475,7 @@ menu-active
         {% for post in posts %}
         <div class="news col-xs-12 col-md-4 col-lg-3">
             <img src="{{ post.thumb.url }}" class="card-img-top" alt="awesome image">
-            <p> | &nbsp; {{ post.date|date:"F d" }} &nbsp;.</p>
+            <p>| &nbsp; {{ post.date|date:"F d" }} &nbsp;.</p>
             <div class="card-body"> 
                 <small>
                     <i class="fas fa-user"></i> admin &nbsp; &nbsp;
