--- a/greensource_pages/templates/greensource_pages/maintenance-service.html
+++ b/greensource_pages/templates/greensource_pages/maintenance-service.html
@@ -74,7 +74,7 @@ menu-active
         </div>
     </div>
     <div class="system-main row padding">
-        <div class="col-lg-5 system">
+        <div class="col-lg-5 col-sm-6 system">
             <h4>maintenance</h4>
             <p>our scope of work includes</p>
             <ol>
@@ -86,7 +86,7 @@ menu-active
                 <li>Monitoring and Calibration</li>
             </ol>
         </div>
-        <div class="system col-lg-5">
+        <div class="col-lg-5 col-sm-6 system">
             <h4>Retrofitting</h4>
             <p>our scope of work includes</p>
             <ol>
