--- a/greensource_pages/templates/greensource_pages/our-team.html
+++ b/greensource_pages/templates/greensource_pages/our-team.html
@@ -81,6 +81,13 @@
                             <p>Engineer</p>
                         </div>
                 </div>
+                <div class="wow fadeIn single-team-one" data-wow-duration="3s" data-wow-delay="0.9s" data-wow-offset="10">
+                    <!-- <img src="{% static 'images/george.png' %}" alt="Tech lead"> -->
+                    <div class="team-text">
+                        <h5>Afolabi Ahmed</h5>
+                        <p>Engineer</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
