--- a/greensource_pages/templates/greensource_pages/project-management.html
+++ b/greensource_pages/templates/greensource_pages/project-management.html
@@ -57,7 +57,7 @@ menu-active
             </li>
         </ul>
         <div class="cut col-lg-8">
-            <img src="{% static 'images/cxc.jpeg' %}" />
+            <img src="{% static 'images/background9.jpg' %}" />
         </div>
     </div>
 </div>
@@ -77,7 +77,7 @@ menu-active
                 savings for residential, commercial, and industrial applications.</p>
         </div>
         <div class="sub-section row">
-            <div class="body col-xs-12 col-md-6 col-lg-4">
+            <div class="body col-xs-12 col-md-6 col-sm-6 col-lg-4">
                 <div>
                     <i class="fas fa-walking"></i>
                 </div>
@@ -85,7 +85,7 @@ menu-active
                 <p class="sub">Identifies deficient equipment issues, areas needing further evaluation, energy saving opportunities and
                     saving potentials</p>
             </div>
-            <div class="body col-xs-12 col-md-6 col-lg-4">
+            <div class="body col-xs-12 col-md-6 col-sm-6 col-lg-4">
                 <div>
                     <i class="fas fa-chart-area"></i>
                 </div>
@@ -93,7 +93,7 @@ menu-active
                 <p class="sub">Audit is carried out using economic calculations using some devices like meters to identify your actual energy
                     consumption and losses.</p>
             </div>
-            <div class="body col-xs-12 col-md-6 col-lg-4">
+            <div class="body col-xs-12 col-md-6 col-sm-6 col-lg-4">
                 <div>
                     <i class="fas fa-chart-pie"></i>
                 </div>
@@ -117,7 +117,7 @@ menu-active
             </ol>
         </div>
         <div class="order-list col-lg-5 col-md-6 col-xs-12">
-            <img src="{% static 'images/meter.jpeg' %}" />
+            <img src="{% static 'images/meter.jpg' %}" />
         </div>
     </div>
 </div>
