--- a/greensource_pages/templates/greensource_pages/projects.html
+++ b/greensource_pages/templates/greensource_pages/projects.html
@@ -63,8 +63,8 @@ menu-active
     <div class="container-fluid padding">
         <div class="row-counters row padding">
             <div class="counter-heading col-12">
-                <h5>Our Business Success</h5>
-                <p>You always get the best guidance</p>
+                <h5>You always get the best guidance</h5>
+                <p>Our Business Numbers</p>
                 <hr />
             </div>
             <div class="counter col-xs-12 col-md-6 col-lg-3">
