--- a/greensource_pages/templates/greensource_pages/faq.html
+++ b/greensource_pages/templates/greensource_pages/faq.html
@@ -24,7 +24,7 @@
 <div id="accordion" class="container padding">
     <div class="FAQS row padding">
         <div class="col-12">
-            <h3 class="display-9">Solar Energy</h3>
+            <h3>Solar Energy</h3>
             <div class="card">
                 <div class="card-header" id="headingTen">
                     <h5 class="mb-0">
