--- a/greensource_pages/templates/greensource_pages/services.html
+++ b/greensource_pages/templates/greensource_pages/services.html
@@ -24,7 +24,7 @@ menu-active
 <section class="sec-pad-with-content-margin-30 gray-bg service-page-one">
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                 <div class="single-service-style-one wow fadeIn" data-wow-duration="3s" data-wow-delay="0.2s" data-wow-offset="10">
                     <div class="top-box">
                         <div class="inner-content">
@@ -46,7 +46,7 @@ menu-active
                     </div>
                 </div>
             </div>
-            <div class="col-lg-4 col-md-6 col-sm-6">
+            <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
                 <div class="single-service-style-one wow fadeIn" data-wow-duration="6s" data-wow-delay="0.2s" data-wow-offset="10">
                     <div class="top-box">
                         <div class="inner-content">
