--- a/greensource_pages/templates/greensource_pages/training.html
+++ b/greensource_pages/templates/greensource_pages/training.html
@@ -93,8 +93,8 @@
     <div class="container-fluid padding">
         <div class="training row padding">
             <div class="col-lg-12">
-                <h1>greensource energy</h1>
-                <h2>We are coming soon</h2>
+                <h1>Pv system training</h1>
+                <h2>Coming soon</h2>
                 <div class="count">
                     <div class="countd">
                         <span id="days">00</span>
