--- a/news/templates/article_category.html
+++ b/news/templates/article_category.html
@@ -22,10 +22,10 @@ menu-active
     </ol>
 </nav>
 
-<div class="container-fluid">
+<div class="container-fluid padding">
     <div class="blog row padding">
-        <div class="col-lg-8">
-            <div class="news row">
+        <div class="col-lg-8 col-md-4 col-sm-6 col-xs-12">
+            <div class="news">
                 {% if cat_posts %}
                 {% for post in cat_posts %}
                 <div class="cad col-lg-5 col-md-6">
@@ -33,7 +33,7 @@ menu-active
                     <p> | &nbsp; {{ post.date|date:"F d" }} &nbsp;.</p>
                     <div class="card-body">
                         <small class="text-muted"><i class="fas fa-user"></i> Admin  &nbsp; &nbsp;<i class="far fa-heart"></i> 23&nbsp; &nbsp;<i class="far fa-comments"></i> 3</small>
-                        <a href="{{post.slug}}"><h5 class="card-title">{{post.slug}}</h5></a>
+                        <a href="{{ post.get_absolute_url }}"><h5 class="card-title">{{ post.title }}</h5></a>
                     </div>
                 </div>
                 {% endfor %}
