--- a/staticfiles/home.css
+++ b/staticfiles/home.css
@@ -483,9 +483,9 @@ nav .breadcrumb li a:hover{
 .service h5{
 	margin-top: 150px; 
 	font-family: 'Play', sans-serif;
-	font-size: 20px;
-	font-weight: 550;
-	color:#555;
+	font-size: 22px;
+	font-weight: 560;
+	color:#111;
 	text-align: center;
 	text-transform: uppercase;
 }
@@ -866,7 +866,7 @@ nav .breadcrumb li a:hover{
 }
 .choose1{
 	background: #6a9e97;
-	padding: 30px 25px;
+	padding: 30px 15px;
 	margin-top: 50px;
 	left: 10%;
 	width: 40%;
@@ -1357,11 +1357,11 @@ nav .breadcrumb li a:hover{
 .counter-heading h5{
 	margin-top :70px; 
 	font-family: 'Play', sans-serif;
-	font-size: 30px;
+	font-size: 22px;
 	font-weight: 600;
 	color: #fff;
-	letter-spacing: 2px;
 	text-align: center;
+	text-transform: uppercase;
 }
 .counter-heading hr{
 	margin-top:5px;
@@ -1375,6 +1375,7 @@ nav .breadcrumb li a:hover{
 	font-size: 18px;
 	color: #fff;
 	text-align: center;
+	letter-spacing: 1px;
 }
 .counter span{
 	color:#cdcdcd;
@@ -2481,6 +2482,7 @@ nav .breadcrumb li a:hover{
 	font-family: 'Big Shoulders Text', cursive;
 	margin-top: 200px;
 	color:#fafafa;
+	text-align: center;
 }
 .error p{
 	margin-top: 30px;
