--- a/templates/base_layout.html
+++ b/templates/base_layout.html
@@ -10,30 +10,21 @@
 
   gtag('config', 'UA-179025578-1');
 </script>
-<meta charset="utf-8" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script async src="https://cdn.ampproject.org/v0.js"></script>
 <link rel="canonical" href="https://amp.dev/documentation/guides-and-tutorials/start/create/basic_markup/">
-<script type="application/ld+json">
-    {
-        "@context": "http://schema.org",
-        "@type": "NewsArticle",
-        "headline": "Open-source framework for publishing content",
-        "datePublished": "2015-10-07T12:02:41Z",
-        "image": [
-          "logo.jpg"
-        ]
-    }
-    </script>
     <style amp-boilerplate>body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}</style><noscript><style amp-boilerplate>body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}</style></noscript>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
     <meta name="audience" content="all" />
     <meta name="robots" content="index, follow" />
     <meta name="language" content="English" />
-    <meta name="description" content="An end-to-end, innovative green energy installation company and solar professionals, providing cutting edge renewable energy solution services in solar panels design, solar street light, harnessing sun power, energy storage, operations and maintenances solar energy system"/>
-    <meta name="keywords" content="solar company, solar services, affordable solar, sunpower, photovoltaics, solar panel, renewable energy, solar energy system, solar panel installation, solar design"/>
+    <meta name="revisit-after" content="2 days" />
+    <meta name="description" content="An end-to-end, innovative solar energy installation company, providing cutting edge renewable energy solution services"/>
+    <meta name="keywords" content="solar system, solar panel, solar energy, solar, solar inverter, solar panel price in nigeria, solar battery, solar street light, 
+    solar power system, solar inverter installation, solar lighting system, renewable energy, solar companies in lagos/ogun, solar business in nigeria, solar quotes, green energy, energy sources, alternative energy"/>
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="greensourcenergy.com" />
-    <meta name="twitter:creator" content="@GreensourceE" />
+    <meta name="twitter:creator" content="@greenn_energy" />
     <meta name="twitter:title" content="Developing clean and safe energy solution" />
     <meta name="twitter:description" content=" We are an end-to-end, customer oriented, innovative green energy and management company providing cutting edge renewable
     energy solutions for residential, large and small businesses..." />
@@ -82,7 +73,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Play&display=swap" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text&display=swap" rel="stylesheet" />
-<script>
+     <script>
     !function(f,b,e,v,n,t,s)
     {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
     n.callMethod.apply(n,arguments):n.queue.push(arguments)};
@@ -94,23 +85,31 @@
     fbq('init', '680910845861426');
     fbq('track', 'PageView');
     </script>
-    <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=680910845861426&ev=PageView&noscript=1"
-    /></noscript>
+    <noscript><img height="1" width="1" src="https://www.facebook.com/tr?id=680910845861426&ev=PageView&noscript=1"/></noscript>
     <script type="application/ld+json">
         {
-          "@context": "https://schema.org/",
-          "@type": "WebSite",
+          "@context": "https://schema.org",
+          "@type": "Energy Company",
+          "image": [
+          "https://greensourcenergy.com/static/images/about-us.jpg"
+          "https://greensourcenergy.com/static/images/about-us.jpg"
+          "https://greensourcenergy.com/static/images/about-us.jpg"
+          ]
           "name": "GREENSOURCE ENERGY",
           "url": "greensourcenergy.com",
-          "potentialAction": {
-            "@type": "SearchAction",
-            "target": "greensourcenergy.com/about{search_term_string}",
-            "query-input": "required name=search_term_string"
+          "address": {
+            "@type": "ContactPoint",
+            "streetAddress": "1, heritage st by anobi noah, arogun",
+            "addressLocality": "Mowe - Ofada"
+            "addressRegion": "Ogun"
+            "postalCode": "110115",
+            "addressCountry": "Nigeria"
+            "telephone": "+2348029442697",
+            "contactType": "professional service"
           }
         }
     </script>
-    <script type="text/javascript">
+    <script>
         (function () {
         var options = {
         whatsapp: "+2348029442697",
@@ -122,7 +121,7 @@
         s.onload = function () { WhWidgetSendButton.init(host, proto, options); };
         var x = document.getElementsByTagName('script')[0]; x.parentNode.insertBefore(s, x);
         })();
-    </script>    
+    </script>  
 </head>
 <body>
     <div class="review container-fluid padding">
@@ -195,11 +194,11 @@
                             </li>
                         </ul>
                     </li>
-                    <li class="{% block nav-design-plans %}{% endblock %}">
-                        <a href="{% url 'design_plans' %}">Products</a>
-                    </li>
                     <li class="{% block nav-projects %}{% endblock %}">
                         <a href="{% url 'projects' %}">projects</a>
+                    </li>
+                    <li class="{% block nav-design-plans %}{% endblock %}">
+                        <a href="{% url 'design_plans' %}">Shop</a>
                     </li>
                     <li class="{% block nav-news %}{% endblock %}">
                         <a href="{% url 'article_list' %}">news</a>
@@ -209,6 +208,10 @@
                     </li>
                 </ul>
             </nav>
+            <div class="shoppingCart">
+                <p>0</p>
+                    <i class="fas fa-shopping-cart"></i>
+                </div>
         </div>
     </header>
     {% block content %}
@@ -225,7 +228,7 @@
                     </p>
                     <div class="map padding">
                         <h6>/ LOCATE US</h6>
-                        <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7922.741452898637!2d3.433366268485239!3d6.84608399012105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bc7b12aa0619b%3A0x668d6d2407416eeb!2sGREENSOURCE+ENGINEERING+CONSULT!5e0!3m2!1sen!2sng!4v1554279134001!5m2!1sen!2sng">Go To Map
+                        <a href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7922.741452898637!2d3.433366268485239!3d6.84608399012105!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x103bc7b12aa0619b%3A0x668d6d2407416eeb!2sGREENSOURCE+ENGINEERING+CONSULT!5e0!3m2!1sen!2sng!4v1554279134001!5m2!1sen!2sng">Map
                             <i class="fas fa-arrow-right"></i>
                         </a>
                     </div>
@@ -326,7 +329,7 @@
             </div>
         </div>
     </section>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>  
     <script>window.jQuery || document.write('<script src="/static/js/jquery-3.3.1.min.js"><\/script>')</script></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
     <script>window.jQuery || document.write('<script src="/static/js/popper.min.js"><\/script>')</script></script>
