--- a/staticfiles/owl-carousel/owl.carousel.css
+++ b/staticfiles/owl-carousel/owl.carousel.css
@@ -56,6 +56,7 @@
   .owl-carousel .owl-nav .owl-next,
   .owl-carousel .owl-dot {
     cursor: pointer;
+    font-size: 50px;
     -webkit-user-select: none;
     -khtml-user-select: none;
     -moz-user-select: none;
@@ -68,6 +69,7 @@
     color: inherit;
     border: none;
     padding: 0 !important;
+    font-size: 150px;
     font: inherit; }
   .owl-carousel.owl-loaded {
     display: block; }
